build/kubernetes/deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: project2-deployment
  labels:
    app: project2-api

spec:
  replicas: 3
  selector:
    matchLabels:
      app: project2-api
  template:
    metadata:
      labels:
        app: project2-api
    spec:
      containers:
      - name: project2-server
        image: dcentech/project2-api-server:latest
        ports:
        - containerPort: 5000
