build/kubernetes/service.yml
kind: Service
apiVersion: v1

metadata:
  name: project2-service
  labels:
    app: project2-api

spec:
  type: NodePort
  selector:
    app: project2-api
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5000
