build/kubernetes/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: project2-ingress

spec:
  defaultBackend:
    service:
      name: project2-api-service
      port:
        number: 5001
